--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_CtasPorCobrarConceptos.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_CtasPorCobrarConceptos.cshtml
@@ -2,18 +2,17 @@
 @model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.CtasPorCobrar.TI_ConceptoPago>
 @using GridMvc.Html
 
-.
+
 <div class="table-responsive" style="min-height:300px; font-size: 13px;">
     @Html.Grid(Model).Columns(columns =>
     {
         columns.Add(c => c.T_TablaNom).Css("text-center").Titled("Tabla origen").Filterable(true);
-        columns.Add(c => c.T_ConceptoPagoDesc).Css("text-center").Titled("Concepto de pago").Filterable(true);
-        columns.Add(c => c.I_ConcPagID).Css("text-truncate").Titled("Cod Concepto").Filterable(true);
-        columns.Add(c => c.I_ProcesoID).Titled("ID Proc.").Filterable(true);
+        columns.Add(c => c.I_ConcPagID).Css("text-truncate").Titled("Código").Filterable(true);
+        columns.Add(c => c.T_ConceptoPagoDesc).Css("text-truncate").Titled("Concepto de pago").Filterable(true);
         columns.Add(c => c.T_ProcesoDesc).Titled("Nom. proceso").Filterable(true);
         columns.Add(c => c.I_Anio).Titled("Año").Filterable(true);
         columns.Add(c => c.T_PeriodoDesc).Css("text-center").Titled("Periodo").Filterable(true);
-        columns.Add(c => c.M_Monto).Css("text-center").Titled("Periodo").Filterable(true);
+        columns.Add(c => c.M_Monto).Css("text-center").Titled("Monto").Filterable(true);
         //columns.Add(c => c.N_CodBanco).Css("text-center").Titled("Cod. BNC").Filterable(true);
         columns.Add(c => c.B_Migrado).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrado").Filterable(true)
                 .RenderValueAs(model => model.B_Migrado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
@@ -29,7 +28,8 @@
 
 <script>
     $('#btn-tp').removeClass('active');
-    $('#btn-mg').addClass('active');
+    $('#btn-cpp').addClass('active');
+    $('#btn-mg').removeClass('active');
     $('#btn-proc').removeClass('active');
 
 </script>
