--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_ProcesoMigracion.cshtml
@@ -34,6 +34,7 @@
 
 <script>
     $('#btn-tp').removeClass('active');
+    $('#btn-cpp').removeClass('active');
     $('#btn-mg').removeClass('active');
     $('#btn-proc').addClass('active');
 
