--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_TemporalPagos.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_TemporalPagos.cshtml
@@ -21,6 +21,7 @@
 
 <script>
     $('#btn-tp').addClass('active');
+    $('#btn-cpp').removeClass('active');
     $('#btn-mg').removeClass('active');
     $('#btn-proc').removeClass('active');
 </script>
