--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_TemporalPagosDetalle.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_TemporalPagosDetalle.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-12" id="tabla-errores">
             <table class="table table-sm table-hover" style="font">
-                <thead class="thead-light"> 
+                <thead class="thead-light">
                     <tr>
                         <th>Concepto</th>
                         <th>Fch_venc</th>
@@ -22,7 +22,7 @@
                         <th>Tipo_pago</th>
                         <th>No_banco</th>
                         <th>Id_lug_pag</th>
-                        <th>Eliminado</th>
+                        <th>Estado</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -33,13 +33,58 @@
                             <td>@item.Fch_venc.ToShortDateString()</td>
                             <td>@item.Cantidad</td>
                             <td>@item.Monto</td>
-                            <td>@item.Pagado</td>
+                            <td>
+                                @if (item.Pagado)
+                                {
+                                    <span class="badge badge-pill badge-success"><i class="fa fa-check-circle"></i> Sí</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-pill badge-warning text-light"><i class="fa fa-exclamation-triangle"></i> No</span>
+                                }
+                            </td>
                             <td>@item.Cod_cajero</td>
-                            <td>@item.Pag_demas</td>
-                            <td>@item.Tipo_pago</td>
-                            <td>@item.No_banco</td>
+                            <td>
+                                @if (item.Pag_demas)
+                                {
+                                    <span class="badge badge-pill badge-warning text-light"><i class="fa fa-exclamation-triangle"></i> Sí</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-pill badge-success"><i class="fa fa-check-circle"></i> No</span>
+                                }
+                            </td>
+                            <td>
+                                @if (item.Tipo_pago)
+                                {
+                                    <span class="badge badge-pill badge-info"><i class="fa fa-check-circle"></i> Sí</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-pill badge-secondary"><i class="fa fa-times-circle"></i> No</span>
+                                }
+                            </td>
+                            <td>
+                                @if (item.No_banco)
+                                {
+                                    <span class="badge badge-pill badge-info"><i class="fa fa-check-circle"></i> Sí</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-pill badge-secondary"><i class="fa fa-times-circle"></i> No</span>
+                                }
+                            </td>
                             <td>@item.Id_lug_pag</td>
-                            <td>@item.Eliminado</td>
+                            <td>
+                                @if (item.Eliminado)
+                                {
+                                    <span class="badge badge-pill badge-danger"><i class="fa fa-times-circle"></i> Eliminado</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-pill badge-info"><i class="fa fa-check-circle"></i> Activo</span>
+                                }
+                            </td>
                         </tr>
                     }
                 </tbody>
