--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_EditarObligacion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_EditarObligacion.cshtml
@@ -1,5 +1,6 @@
 ﻿@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.Obligacion
 @Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/bootstrap4toggle")
 
 @{
     string tipoObs = ViewBag.TipoObserv;
@@ -18,19 +19,19 @@
 
                 <div class="form-row">
                     <div class="form-group col-2">
-                        @Html.Label("Cod Carrera", new { @class = "col-form-label", @for = "I_Anio" })
+                        @Html.Label("Cod Carrera", new { @class = "col-form-label", @for = "Cod_RC" })
                         @Html.TextBoxFor(model => model.Cod_RC, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                     <div class="form-group col-4">
-                        @Html.Label("Cod Carrera", new { @class = "col-form-label", @for = "I_Anio" })
+                        @Html.Label("Cod Carrera", new { @class = "col-form-label", @for = "T_Carrera" })
                         @Html.TextBoxFor(model => model.T_Carrera, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                     <div class="form-group col-2">
-                        @Html.Label("Cod. Estudiante", new { @class = "col-form-label", @for = "Grado", @style = "display: block;" })
+                        @Html.Label("Cod Estudiante", new { @class = "col-form-label", @for = "Cod_alu" })
                         @Html.TextBoxFor(model => model.Cod_alu, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                     <div class="form-group col-4">
-                        @Html.Label("Estudiante", new { @class = "col-form-label", @for = "Grado", @style = "display: block;" })
+                        @Html.Label("Estudiante", new { @class = "col-form-label", @for = "NomAlumno" })
                         @Html.TextBoxFor(model => model.NomAlumno, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                 </div>
@@ -41,7 +42,7 @@
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
-                        @Html.DropDownListFor(model => model.I_Periodo, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
+                        @Html.DropDownListFor(model => model.I_Periodo, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", @disabled = "true" })
                     </div>
                     <div class="form-group col-2">
                         @Html.Label("Código Cuota", new { @class = "col-form-label", @for = "Cuota_pago" })
@@ -54,20 +55,20 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-3">
-                        @Html.Label("Fecha Vencto.", new { @class = "col-form-label", @for = "I_Anio" })
+                        @Html.Label("Fecha Vencto", new { @class = "col-form-label", @for = "Fch_venc" })
                         @Html.TextBoxFor(model => model.Fch_venc, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Monto", new { @class = "col-form-label", @for = "I_Periodo" })
-                        @Html.TextBoxFor(model => model.Fch_venc, new { @class = "form-control form-control-sm", @readonly = "true" })
+                        @Html.TextBoxFor(model => model.Monto, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                     <div class="form-group col-3">
-                        @Html.Label("Tipo Obligacion", new { @class = "col-form-label", @for = "Grado", @style = "display: block;" })
-                        @Html.CheckBoxFor(model => model.Tipo_oblig, new { @data_toggle = "toggle", @data_on = "SI", @data_off = "NO", @data_onstyle = "info", @data_offstyle = "secondary", @data_size = "sm" })
+                        @Html.Label("Tipo Obligacion", new { @class = "col-form-label", @for = "Tipo_oblig", @style = "display: block;" })
+                        @Html.CheckBoxFor(model => model.Tipo_oblig, new { @data_toggle = "toggle", @data_on = "SI", @data_off = "NO", @data_onstyle = "info", @data_offstyle = "secondary", @data_size = "sm", @disabled = "true" })
                     </div>
                     <div class="form-group col-3">
-                        @Html.Label("Pagado", new { @class = "col-form-label", @for = "Grado", @style = "display: block;" })
-                        @Html.CheckBoxFor(model => model.Pagado, new { @data_toggle = "toggle", @data_on = "SI", @data_off = "NO", @data_onstyle = "info", @data_offstyle = "secondary", @data_size = "sm" })
+                        @Html.Label("Pagado", new { @class = "col-form-label", @for = "Pagado", @style = "display: block;" })
+                        @Html.CheckBoxFor(model => model.Pagado, new { @data_toggle = "toggle", @data_on = "SI", @data_off = "NO", @data_onstyle = "info", @data_offstyle = "secondary", @data_size = "sm", @disabled = "true" })
                     </div>
                 </div>
             }
