vistas detalle obligaciones

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/DetalleObligacion/_EditarDetalleObligacion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/DetalleObligacion/_EditarDetalleObligacion.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.DetalleObligacion
+﻿
+@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.DetalleObligacion
 @Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/bootstrap4toggle")
 
