--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_DatosMigracion.cshtml
@@ -34,7 +34,7 @@
     columns.Add(c => c.Fch_venc).RenderValueAs(model => model.Fch_venc.ToShortDateString()).Titled("Fec. Venc.").Filterable(true);
     columns.Add(c => c.Monto).Css("text-right").Titled("Monto").Filterable(true);
     columns.Add().SetWidth(150).Css("text-center").Encoded(false).Sanitized(false).Titled("Detalle conceptos")
-                 .RenderValueAs(model => @Html.Raw($"<a href=\"{ Url.Action("CargarDetalle", "Obligaciones", new { id = model.I_RowID, procedencia = str_procedencia, area = "" })}\" class=\"btn btn-xs btn-warning modal-link-lg\">" +
+                 .RenderValueAs(model => @Html.Raw($"<a href=\"{ Url.Action("CargarDetalle", "DetalleObligacion", new { id = model.I_RowID, procedencia = str_procedencia, area = "" })}\" class=\"btn btn-xs btn-warning modal-link-lg\">" +
                                                        $"<i class=\"bi-list-check\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Ver detalle</span>" +
                                                    $"</a>"));
     columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrable").Filterable(true)
